# TG-Robotic-Arm-Controller

robot_bringup/launch/: arm620_real.launch.py  robot_real.launch.py
robot_driver/: CMakeLists.txt
robot_driver/include/: robot_driver_rx.h  robot_driver_tx.h  robot_working_mode.h
robot_driver/launch/: robot_driver.launch.py
robot_driver/src/: main.cpp  robot_driver_canrx_new.cpp  robot_driver_cantx_new.cpp
robot_gazebo/launch/: robot_gazebo.launch.py
robot_input/: package.xml  setup.py
robot_input/robot_input/: key_mappings.py  keyboard_controller.py  robot_messages.py
robot_interfaces/: CMakeLists.txt
robot_interfaces/msg/: MoveCAction.msg
robot_keyboard_to_twist_py/robot_keyboard_to_twist_py/: keyboard_to_twist.py
robot_kinematics/: CMakeLists.txt
robot_kinematics/include/: robot_key_controller.h
robot_kinematics/launch/: robot_controller.launch.py
robot_kinematics/src/: robot_key_controller.cpp
robot_qtrecv/src/: robot_tcp_server.cpp
